<resources>
    <string name="app_name">seekshak.com</string>
    <string name="username">Username</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="register">Register</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="select_role">Select Role</string>
    <string name="_91">+91</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="login">Login</string>
    <string name="email_Mobile_Number_user_id">Email / Mobile Number / User ID</string>
    <string name="password">Password</string>
    <string name="login_to_Seekshak.com">Login to Seekshak</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="welcome_student">🎓 Welcome, Student!</string>
    <string name="logout">Logout</string>
    <string name="welcome_institute">Welcome, Institute!</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="back_to_login">← Back to Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="name">Name</string>
    <string name="log_in">LOG IN</string>
    <string name="seekshak_com">Seekshak.com</string>
    <string name="enter_password">Password</string>
    <string name="enter_mobile_number_or_e_mail">Mobile Number or E-mail</string>
    <string name="Institute">Institute</string>
    <string name="Teacher">Teacher</string>
    <string name="Student">Student</string>
    <string name="new_user">New User ? Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_as">Login As</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login_login">already_have_an_account_login_?_Login</string>
    <string name="student">Student</string>
    <string name="institute">Institute</string>
    <string name="Tutor">Tutor\n</string>
    <string-array name="roles_array">
        <item>Student</item>
        <item>Tutor</item>
        <item>Institute</item>
    </string-array>
    <string name="seekshak_co">Seekshak.com</string>
    <string name="todo">TODO</string>
    <string name="select_gender">Select Gender</string>
    <string name="e_connect_w">E-Connect with tutors</string>
    <string name="seekshak_logo">Seekshak Logo</string>

    <string name="signup_as">SignUp As </string>
    <string name="already_have_an_account_log_in">Already Have an Account? Log In</string>
    <string name="otp">OTP</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_e_mail_optional">Enter E-mail (Optional)</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="login_button">Login button</string>
    <string name="verify">Verify</string>
    <string name="otp_not_rec">OTP not Received ?</string>
    <string name="resend_otp">Resend</string>
    <string name="space">" "</string>
    <string name="otp_field_1">OTP field 1</string>
    <string name="otp_field_2">otp field 2</string>
    <string name="back"><![CDATA[<< Back]]></string>
    <string name="enter_new_password">Enter new password</string>
    <string name="submit">Submit</string>
    <string name="reset_password">Reset Password</string>
    <string name="educator">Educator</string>
    <string name="create_password">Create Password</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="new_password">New Password</string>
    <string name="_100">100</string>
    <string name="notification">notification</string>
    <string name="credit">credit</string>
    <string name="search">Search</string>
    <string name="menu_bar">menu bar</string>
    <string name="_4500">4500</string>
    <string name="map">Map</string>
    <string name="poster">poster</string>
    <string name="home">Home</string>
    <string name="my_post">My Post</string>
    <string name="chats">Chats</string>
    <string name="my_account">My Account</string>
    <string name="add_post">Add Post</string>
    <string name="search_icon">search icon</string>
    <string name="teachers_near_you">Teachers Near You :</string>
    <string name="search_a_chat">Search a chat</string>


</resources>