<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#B3E5FC"
    android:paddingTop="36dp">

    <!-- Logo Section -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/title"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_bg"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/countryCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:text="@string/_91"
            android:textColor="#000"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="0dp"
            android:layout_height="21dp"
            android:layout_marginTop="7dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:hint="@string/enter_mobile_number"
            android:inputType="phone"
            android:maxLength="10"
            android:minHeight="48dp"
            android:textColor="#000"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />
    </LinearLayout>

    <!-- OTP Section -->
    <RelativeLayout
        android:id="@+id/frame_8"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/frame_8">


        <Button
            android:id="@+id/sendOtpButton"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:background="@drawable/role_btn_bg"
            android:text="@string/otp"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="0dp">

        <EditText
            android:id="@+id/otp1"
            style="@style/OtpEditText"
            android:autofillHints=""
            android:hint="@string/space"
            tools:ignore="ContentDescription,LabelFor" />

        <EditText
            android:id="@+id/otp2"
            style="@style/OtpEditText"
            android:autofillHints=""
            android:hint="@string/space"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/otp3"
            style="@style/OtpEditText"
            android:autofillHints=""
            android:hint="@string/space"
            tools:ignore="SpeakableTextPresentCheck" />
        <EditText
            android:id="@+id/otp4"
            android:autofillHints=""
            android:hint="@string/space"
            style="@style/OtpEditText" />
        <EditText
            android:id="@+id/otp5"
            android:autofillHints=""
            android:hint="@string/space"
            style="@style/OtpEditText" />
        <EditText
            android:id="@+id/otp6"
            android:autofillHints=""
            android:hint="@string/space"
            style="@style/OtpEditText" />
    </LinearLayout>


    <Button
        android:id="@+id/button_verify_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:background="@drawable/button_bg"
        tools:ignore="VisualLintButtonSize" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="12dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/otp_not_rec"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="48dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/alatsi"
            android:gravity="top"
            android:text="@string/otp_not_rec"
            android:textAppearance="@style/otp_not_rec" />

        <TextView
            android:id="@+id/button_resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="37dp"
            android:layout_toEndOf="@+id/otp_not_rec"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/alatsi"
            android:text="@string/resend_otp"
            android:textAppearance="@style/otp_not_rec"
            android:textColor="#0000FF"
            tools:ignore="RelativeOverlap,TouchTargetSizeCheck" />

    </RelativeLayout>

    <TextView
        android:id="@+id/goToBackPage"
        android:layout_width="63dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="@drawable/rectangle_1"
        android:text="@string/back"
        android:textColor="#0000FF"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

</LinearLayout>
