<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#B3E5FC"
    android:paddingTop="36dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:padding="18dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/title"
                android:contentDescription="@string/todo" />

            <!-- Go to Signup -->
            <TextView
                android:id="@+id/goToSignup"
                android:layout_width="130dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_1"
                android:text="@string/new_user"
                android:textColor="#0000FF"
                android:textSize="14sp"
                android:textStyle="bold" />


            <!-- Login As -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="18dp"
                android:gravity="center"
                android:text="@string/login_as"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />


            <!-- Phone Number -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_bg"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <TextView
                    android:id="@+id/textViewPrefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingEnd="10dp"
                    android:text="@string/_91"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:minHeight="40dp"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </LinearLayout>


            <!-- Send OTP Button -->
            <Button
                android:id="@+id/sendOtpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/role_btn_bg"
                android:text="Send OTP"
                android:minWidth="120dp"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold" />



            <!-- OTP Container ✅ -->
            <LinearLayout
                android:id="@+id/otpContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/otp1"
                    android:inputType="number"
                    android:maxLength="1"
                    style="@style/OtpEditText"
                    android:layout_marginStart="6dp"
                    android:hint="@string/space" />

                <EditText
                    android:id="@+id/otp2"
                    android:inputType="number"
                    android:maxLength="1"
                    style="@style/OtpEditText"
                    android:hint="@string/space" />

                <EditText
                    android:id="@+id/otp3"
                    android:inputType="number"
                    android:maxLength="1"
                    style="@style/OtpEditText"
                    android:hint="@string/space" />

                <EditText
                    android:id="@+id/otp4"
                    android:inputType="number"
                    android:maxLength="1"
                    style="@style/OtpEditText"
                    android:hint="@string/space" />

                <EditText
                    android:id="@+id/otp5"
                    android:inputType="number"
                    android:maxLength="1"
                    style="@style/OtpEditText"
                    android:hint="@string/space" />

                <EditText
                    android:id="@+id/otp6"
                    android:inputType="number"
                    android:maxLength="1"
                    style="@style/OtpEditText"
                    android:hint="@string/space" />
            </LinearLayout>

            <!-- Verify OTP -->
            <Button
                android:id="@+id/verifyOtpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:background="@drawable/role_btn_bg"
                android:text="Verify OTP"
                android:minWidth="120dp"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textSize="12dp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/resendOtpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Resend OTP"
                android:textColor="@color/darkest_blue"
                android:visibility="gone"
                android:textStyle="bold"
                android:paddingTop="8dp"
                android:clickable="true"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <!-- ProgressBar -->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:visibility="gone" />





        </LinearLayout>

</LinearLayout>
